@@ -1,0 +1,7 @@
+class helloworld
+{
+        public static void main(String args[])
+        {
+           System.out.println("Hello World!");
+        }
+}
